--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;400&display=swap" rel="stylesheet"> 
                 
     <meta
-      name="Site portfolio de Florian TORIBIO"
+      name="Site Portfolio de Florian TORIBIO"
       content="Portfolio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Portoflio de Florian</title>
+    <title>Portfolio de Florian</title>
 
   </head>
   <body>
