--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <meta name="theme-color" content="#000000" />
+    <meta name="Description" content="Author: Florian TORIBIO">
                 
     <meta
       name="Site Portfolio de Florian TORIBIO"
